update fencing token validator to use redis as its default persistence layer and remove lambda actions

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,4 +14,5 @@ sentinel-lock:
   min-lease-request-duration: 2_000 # In millis
   sync_idle_ttl: 1_000_000 # In millis
   max-lease-request-duration: 30_000
-
+  client:
+    key_ttl: 1_000_000
